// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

enum Role {
  admin
  faculty
  student
  super_admin
}

enum ProjectStatus {
  proposed
  revise_requested
  advisor_approved
  final_approval
}

enum RequestStatus {
  pending
  approved
  rejected
}

enum GroupRequestType {
  join
  invite
}

model User {
  id                String   @id @default(cuid())
  email             String   @unique
  role              Role     @default(student)
  isActive          Boolean  @default(true)
  profilePictureUrl String?
  createdAt         DateTime @default(now())
  updatedAt         DateTime @updatedAt

  Student   Student?
  Faculty   Faculty?
}

model Student {
  id             String           @id @default(uuid())
  firstName      String
  lastName       String
  major          String
  minor          String?
  bio            String?
  skills         StudentSkill[]
  projects       ProjectMember[]
  createdAt      DateTime         @default(now())
  updatedAt      DateTime         @updatedAt
  userId         String           @unique
  user           User             @relation(fields: [userId], references: [id], onDelete: Cascade)

  AdvisorRequest AdvisorRequest[]
  GroupRequest   GroupRequest[]
}

model Faculty {
  id                String    @id @default(uuid())
  firstName         String
  lastName          String
  department        String
  bio               String?
  researchInterests FacultyResearchInterest[]
  expertiseAreas    FacultyExpertiseArea[]
  advisedProjects   Project[] @relation("advisorId")
  coAdvisedProjects Project[] @relation("coAdvisorId")
  createdAt         DateTime  @default(now())
  updatedAt         DateTime  @updatedAt
  userId            String    @unique
  user              User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  skills FacultySkill[]
}

model Skill {
  id       String         @id @default(uuid())
  name     String         @unique
  students StudentSkill[]
  faculty  FacultySkill[]
}

model Project {
  id                  String           @id @default(uuid())
  title               String
  description         String
  academicYear        String
  department          String
  isInterdisciplinary Boolean          @default(false)
  status              ProjectStatus    @default(proposed)
  groupOpen           Boolean          @default(true)
  advisorId           String?
  coAdvisorId         String?
  advisor             Faculty?         @relation("advisorId", fields: [advisorId], references: [id])
  coAdvisor           Faculty?         @relation("coAdvisorId", fields: [coAdvisorId], references: [id])
  members             ProjectMember[]
  createdAt           DateTime         @default(now())
  updatedAt           DateTime         @updatedAt

  AdvisorRequest AdvisorRequest[]
  GroupRequest   GroupRequest[]
}

model AdvisorRequest {
  id        String        @id @default(uuid())
  status    RequestStatus @default(pending)
  student   Student       @relation(fields: [studentId], references: [id])
  project   Project       @relation(fields: [projectId], references: [id])
  createdAt DateTime      @default(now())
  updatedAt DateTime      @updatedAt

  studentId String
  projectId String

  @@index([studentId])
  @@index([projectId])
}

model GroupRequest {
  id        String        @id @default(uuid())
  status    RequestStatus @default(pending)
  type      GroupRequestType @default(join) // join or invite
  student   Student       @relation(fields: [studentId], references: [id])
  project   Project       @relation(fields: [projectId], references: [id])
  createdAt DateTime      @default(now())
  updatedAt DateTime      @updatedAt

  studentId String
  projectId String

  @@index([studentId])
  @@index([projectId])
}

model ProjectMember {
  student Student @relation(fields: [studentId], references: [id])
  project Project @relation(fields: [projectId], references: [id])

  studentId String
  projectId String

  @@id([studentId, projectId])
}

model StudentSkill {
  student Student @relation(fields: [studentId], references: [id])
  skill   Skill   @relation(fields: [skillId], references: [id])

  studentId String
  skillId   String

  @@id([studentId, skillId])
}

model FacultySkill {
  faculty Faculty @relation(fields: [facultyId], references: [id])
  skill   Skill   @relation(fields: [skillId], references: [id])

  facultyId String
  skillId   String

  @@id([facultyId, skillId])
}

model FacultyResearchInterest {
  faculty           Faculty         @relation(fields: [facultyId], references: [id])
  researchInterest  ResearchInterest @relation(fields: [researchInterestId], references: [id])

  facultyId         String
  researchInterestId String

  @@id([facultyId, researchInterestId])
}

model FacultyExpertiseArea {
  faculty         Faculty       @relation(fields: [facultyId], references: [id])
  expertiseArea   ExpertiseArea @relation(fields: [expertiseAreaId], references: [id])

  facultyId       String
  expertiseAreaId String

  @@id([facultyId, expertiseAreaId])
}

model ResearchInterest {
  id       String                @id @default(uuid())
  name     String                @unique
  faculties FacultyResearchInterest[]
}

model ExpertiseArea {
  id       String              @id @default(uuid())
  name     String              @unique
  faculties FacultyExpertiseArea[]
}
